# quip-rag-mvp

./: .env.example  .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  README.md  Third_Party_List.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy-pages.yml
backend/: config.py  main.py
backend/api/: analytics.py  documents.py  health.py  ingest.py  preprocess.py  query.py  rules.py  tags.py  taxonomy.py
backend/models/: ingest.py  qc.py  query.py  quip.py  rules.py  tags.py  taxonomy.py
backend/prompts/: rag_answer.txt  story_mode.txt
backend/services/: auto_tagger.py  chunker.py  container.py  duck_lance_store.py  embedder.py  errors.py  feedback_retriever.py  interfaces.py  issue_analysis.py  issue_fields.py  issue_normalizer.py  llm_client.py  logging.py  metadata_normalizer.py  mmr.py  qc.py  query_expansion.py  query_planner.py  quip_parser.py  rag_engine.py  reranker.py  retake_detector.py  retrieval_scoring.py  rules_store.py  search_metrics.py  staging_store.py  tags_store.py  taxonomy_store.py  utils.py  vector_store.py
backend/tests/: test_analytics_api.py  test_auto_tagger.py  test_documents_api.py  test_duck_lance_backfill.py  test_duck_lance_store.py  test_feedback_loop_integration.py  test_issue_fields.py  test_llm_client.py  test_qc.py  test_quip_parser.py  test_rag_engine.py  test_reranker.py  test_retake_detector.py  test_search_metrics.py  test_tags_api.py  test_tags_store.py  (+3 more)
docs/: CASE_STUDY.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: scan-public.sh
(+15 files in other folders)
